# atl100_fw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  pytest_atl100.py  sdkconfig  sdkconfig.old
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  config.yml
.github/workflows/: codeql.yml  dependabot.yml  static.yml
docs/doxygen/: Doxyfile
docs/doxygen/html/: ads1x15_8h_source.html  annotated.html  atl__adc_8h_source.html  atl__button_8h_source.html  atl__config_8h_source.html  atl__i2c_8h_source.html  atl__led_8h_source.html  atl__modbus_8h_source.html  atl__modbus__params_8h_source.html  atl__mqtt_8h_source.html  atl__ota_8h_source.html  atl__telemetry_8h_source.html  atl__webserver_8h_source.html  atl__wifi_8h_source.html  classes.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_bad007344d42f4b5340fab5412b591e5.html  dir_bad007344d42f4b5340fab5412b591e5_dep.md5  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  menudata.js  structads1x15__config__t.html  structatl__adc__task__args__t.html  (+22 more)
docs/gh-pages/: .buildinfo  authors_license.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  source_code_docs.html  tech_specs.html  versions_support.html
docs/source/: authors_license.rst  conf.py  index.rst  source_code_docs.rst
main/: CMakeLists.txt  Kconfig.projbuild  atl_adc.c  atl_adc.h  atl_button.c  atl_button.h  atl_config.c  atl_config.h  atl_i2c.c  atl_i2c.h  atl_led.c  atl_led.h  atl_main.c  atl_modbus.c  atl_modbus.h  atl_modbus_params.c  atl_modbus_params.h  atl_mqtt.c  atl_mqtt.h  atl_ota.c  atl_ota.h  atl_telemetry.c  atl_telemetry.h  atl_webserver.c  atl_webserver.h  atl_wifi.c  atl_wifi.h  idf_component.yml
main/include/: ads1x15.c  ads1x15.h
main/website/: atl.css  atl.js  footer.html  header.html
(+64 files in other folders)
