idf_component_register(SRCS 
                         "atl_button.c"
                         "atl_config.c"
                         "atl_led.c"
                         "atl_main.c"
                         "atl_mqtt.c"
                         "atl_webserver.c"
                         "atl_wifi.c"
                       INCLUDE_DIRS
                         "."
                         "include/"
                       EMBED_FILES                         
                         "website/header.html"
                         "website/footer.html" 
                         "website/favicon.ico"
                         "website/atl.css"
                         "website/atl.js"
                      )
